Fixed jump to date stretching across the entire page

--- a/templates/scheduler/schedulestyle.css
+++ b/templates/scheduler/schedulestyle.css
@@ -147,3 +147,6 @@ div.eventmenu.open .eventmenubtn {
 div.eventmenu .eventmenubtn:hover {
     background-color:darkgray;
 }
+#jumptodatecontainer {
+    max-width:300px;
+}
